--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -4,4 +4,8 @@
 <h3><a href="/merchants/<%= merchant.id %>"><%= merchant.id %></a></h3>
   <p><%= merchant.name %></p>
   <a href="/merchants/<%= merchant.id  %>/edit">Edit</a>
+  <form action="/merchants/<%= merchant.id %>" method="POST">
+    <input type="hidden" name="_method" value="DELETE">
+    <input type="submit" value="delete"/>
+  </form>
 <% end %>
