Adds category views

--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -3,4 +3,6 @@
 <ul>
   <li><a href="/merchants">Merchant Index</a></li>
   <li><a href="/merchants/new">New Merchant</a></li>
+  <li><a href="/categories">Category Index</a></li>
+  <li><a href="/categories/new">New Category</a></li>
 </ul>
