--- a/app/views/merchants/show.erb
+++ b/app/views/merchants/show.erb
@@ -3,3 +3,9 @@
 <h1><%= @merchant.name %></h1>
 
 <p><%= @merchant.id %></p>
+
+<a href="/merchants/<%= @merchant.id  %>/edit">Edit</a>
+<form action="/merchants/<%= @merchant.id %>" method="POST">
+  <input type="hidden" name="_method" value="DELETE">
+  <input type="submit" value="delete"/>
+</form>
