--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -1,8 +1,34 @@
-<h1>Welcome to the Shop With No Name</h1>
+<!DOCTYPE html>
 
-<ul>
-  <li><a href="/merchants">Merchant Index</a></li>
-  <li><a href="/merchants/new">New Merchant</a></li>
-  <li><a href="/categories">Category Index</a></li>
-  <li><a href="/categories/new">New Category</a></li>
-</ul>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Shop With No Name</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
+  </head>
+
+  <body>
+    <header>
+      <h1>Welcome to the Shop With No Name</h1>
+    </header>
+
+    <nav>
+        <a href="/merchants">Merchant Index</a>
+        <!-- <li><a href="/merchants/new">New Merchant</a></li> -->
+        <a href="/categories">Category Index</a>
+        <!-- <li><a href="/categories/new">New Category</a></li> -->
+        <a href="/items">Item Index</a>
+    </nav>
+
+    <section>
+    </section>
+
+    <footer>
+      <p>Email Us: <a href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
+    </footer>
+
+    <div>
+    </div>
+  </body>
+</html>
