--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -1,11 +1,46 @@
-<h1>All Merchants</h1>
+<!DOCTYPE html>
 
-<% @merchants.each do |merchant| %>
-<h3><a href="/merchants/<%= merchant.id %>"><%= merchant.id %></a></h3>
-  <p><%= merchant.name %></p>
-  <a href="/merchants/<%= merchant.id  %>/edit">Edit</a>
-  <form action="/merchants/<%= merchant.id %>" method="POST">
-    <input type="hidden" name="_method" value="DELETE">
-    <input type="submit" value="delete"/>
-  </form>
-<% end %>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Shop With No Name</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
+  </head>
+
+  <body>
+    <header>
+      <h1>Merchants</h1>
+    </header>
+
+    <nav>
+        <a href="/">Home</a>
+        <a href="/categories">Category Index</a>
+        <a href="/items">Item Index</a>
+    </nav>
+
+    <section class='create-new'>
+      <a class='body-link' href='/merchants/new'>Create New Merchant</a>
+    </section>
+
+    <section class="display-grid">
+      <% @merchants.each do |merchant| %>
+        <div>
+        <h3><a class='body-link' href="/merchants/<%= merchant.id %>"><%= merchant.name %></a></h3>
+          <a href="/merchants/<%= merchant.id  %>/edit">Edit</a>
+          <form action="/merchants/<%= merchant.id %>" method="POST">
+            <input type="hidden" name="_method" value="DELETE">
+            <input type="submit" value="delete"/>
+          </form>
+        </div>
+      <% end %>
+    </section>
+
+    <footer>
+      <p>Email Us: <a href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
+    </footer>
+
+    <div>
+    </div>
+  </body>
+</html>
