--- a/app/views/merchants/new.erb
+++ b/app/views/merchants/new.erb
@@ -1,5 +1,23 @@
-<form action="/merchants" method="post">
-  <p>Enter a new merchant:</p>
-  <input type='text' name='merchant[name]'/><br/>
-  <input type='submit'/>
-</form>
+<!DOCTYPE html>
+
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Shop With No Name</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
+    <link rel="stylesheet" href="stylesheets/main.css" title="text/css" />
+  </head>
+
+  <body>
+    <header>
+      <h1>Create New Merchant</h1>
+    </header>
+
+    <form action="/merchants" method="post">
+      <p>Enter a new merchant:</p>
+      <input type='text' name='merchant[name]'/><br/>
+      <input type='submit'/>
+    </form>
+
+  </body>
+</html>
