merchant feature tests written - still need to verify item merchant connection

--- a/app/views/merchants/edit.erb
+++ b/app/views/merchants/edit.erb
@@ -2,6 +2,6 @@
 <form action="/merchants/<%= @merchant.id %>" method="POST">
   <p>Edit</p>
   <input type="hidden" name="_method" value="PUT" />
-  <input type='text' name='merchant[name]' value="<%= @merchant.name %>"/><br/>
-  <input type='submit'/>
+  <input id='edit-name' type='text' name='merchant[name]' value="<%= @merchant.name %>"/><br/>
+  <input id='edit-submit' type='submit'/>
 </form>
