--- a/app/views/merchants/new.erb
+++ b/app/views/merchants/new.erb
@@ -22,8 +22,8 @@
     <section class="create-form">
       <form action="/merchants" method="post">
         <p>Create a new merchant:</p>
-        <input type='text' name='merchant[name]' value="Name"/><br/><br/>
-        <input type='submit'/>
+        <input id='new-name' type='text' name='merchant[name]' value="Name"/><br/><br/>
+        <input id='new-submit' type='submit'/>
       </form>
     </section>
 
