--- a/app/views/items/new.erb
+++ b/app/views/items/new.erb
@@ -22,21 +22,21 @@
     <section class="create-form">
       <form action="/items" method="POST">
         <p>Create a new item:</p>
-        <input type='text' name='item[title]' value="Title"/><br/><br/>
-        <textarea name='item[description]' value="Description Here"></textarea><br/>
-        <input type='number' name='item[price]' value="Price"/><br/><br/>
-        <input type='text' name='item[image]' value="Image URL"/><br/><br/>
-        <select name='item[merchant_id]'>
+        <input id='new-title' type='text' name='item[title]' value="Title"/><br/><br/>
+        <textarea id='new-descr' name='item[description]' value="Description Here"></textarea><br/>
+        <input id='new-price' type='number' name='item[price]' value="Price"/><br/><br/>
+        <input id='new-image' type='text' name='item[image]' value="Image URL"/><br/><br/>
+        <select id='new-merchant' name='item[merchant_id]'>
           <% @merchants.each do |merchant| %>
             <option value="<%= merchant.id %>"><%= merchant.name %></option>
           <% end %>
         </select><br/><br/>
-        <select name='item[category_id]'>
+        <select id='new-category' name='item[category_id]'>
           <% @categories.each do |category| %>
             <option value="<%= category.id %>"><%= category.name %></option>
           <% end %>
         </select><br/><br/>
-        <input type='submit'/>
+        <input id='new-submit' type='submit'/>
       </form>
     </section>
 
