--- a/app/views/categories/show.erb
+++ b/app/views/categories/show.erb
@@ -1,11 +1,37 @@
-<a href="/categories">Category Index</a>
+<!DOCTYPE html>
 
-<h1><%= @category.name %></h1>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Shop With No Name</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/main.css" title="text/css" />
+  </head>
 
-<p><%= @category.id %></p>
+  <body>
+    <header>
+      <h1>Edit Category</h1>
+    </header>
 
-<a href="/categories/<%= @category.id  %>/edit">Edit</a>
-<form action="/categories/<%= @category.id %>" method="POST">
-  <input type="hidden" name="_method" value="DELETE">
-  <input type="submit" value="delete"/>
-</form>
+    <nav>
+        <a href="/merchants">Merchant Index</a>
+        <a href="/categories">Category Index</a>
+        <a href="/items">Item Index</a>
+    </nav>
+
+    <section>
+      <h1><%= @category.name %></h1>
+      <p><%= @category.id %></p>
+      <a href="/categories/<%= @category.id  %>/edit">Edit</a>
+      <form action="/categories/<%= @category.id %>" method="POST">
+        <input type="hidden" name="_method" value="DELETE">
+        <input type="submit" value="delete"/>
+      </form>
+    </section>
+
+    <footer>
+      <p>Email Us: <a href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
+    </footer>
+
+  </body>
+</html>
