Adds passing tests for user editing categories

--- a/app/views/categories/edit.erb
+++ b/app/views/categories/edit.erb
@@ -23,8 +23,8 @@
       <form action="/categories/<%= @category.id %>" method="POST">
         <p>Edit</p>
         <input type="hidden" name="_method" value="PUT" />
-        <input type='text' name='category[name]' value="<%= @category.name %>"/><br/>
-        <input type='submit'/>
+        <input id='edit-name' type='text' name='category[name]' value="<%= @category.name %>"/><br/>
+        <input id='edit-submit' type='submit'/>
       </form>
     </section>
 
