Adds nav-link styling for all category pages

--- a/app/views/categories/show.erb
+++ b/app/views/categories/show.erb
@@ -14,9 +14,9 @@
     </header>
 
     <nav>
-        <a href="/merchants">Merchant Index</a>
-        <a href="/categories">Category Index</a>
-        <a href="/items">Item Index</a>
+        <a class='nav-links' href="/merchants">Merchant Index</a>
+        <a class='nav-links' href="/categories">Category Index</a>
+        <a class='nav-links' href="/items">Item Index</a>
     </nav>
 
     <section>
@@ -30,7 +30,7 @@
     </section>
 
     <footer>
-      <p>Email Us: <a href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
+      <p>Email Us: <a class='nav-links' href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
     </footer>
 
   </body>
