--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -10,22 +10,21 @@
 
   <body>
     <header>
-      <h1>Welcome to the Shop With No Name</h1>
+      <img style="height:150px" src="images/old_merchant_edit.png">
+      <h1 class="welcome-text">The Shop With No Name...</h1>
     </header>
 
     <nav>
-        <a href="/merchants">Merchant Index</a>
-        <!-- <li><a href="/merchants/new">New Merchant</a></li> -->
-        <a href="/categories">Category Index</a>
-        <!-- <li><a href="/categories/new">New Category</a></li> -->
-        <a href="/items">Item Index</a>
+        <a class='nav-links' href="/merchants">Merchant Index</a>
+        <a class='nav-links' href="/categories">Category Index</a>
+        <a class='nav-links' href="/items">Item Index</a>
     </nav>
 
     <section>
     </section>
 
     <footer>
-      <p>Email Us: <a href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
+      <p>Email Us: <a class='nav-links' href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
     </footer>
 
     <div>
