--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -26,7 +26,7 @@
     <section class="display-grid">
       <% @items.each do |item| %>
         <div>
-        <div class='body-link'><h3><a href="/items/<%= item.id %>"><%= item.title %></a></h3></div>
+        <div class='cell-title'><h3><a class='body-link' href="/items/<%= item.id %>"><%= item.title %></a></h3></div>
           <img class='item-image' src="<%= item.image %>"><br>
           <a href="/items/<%= item.id  %>/edit">Edit</a>
           <form id='delete' action="/items/<%= item.id %>" method="POST">
