--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -14,9 +14,9 @@
     </header>
 
     <nav>
-        <a href="/">Home</a>
-        <a href="/categories">Category Index</a>
-        <a href="/items">Item Index</a>
+        <a class='nav-links' href="/">Home</a>
+        <a class='nav-links' href="/categories">Category Index</a>
+        <a class='nav-links' href="/items">Item Index</a>
     </nav>
 
     <section class='create-new'>
@@ -37,7 +37,7 @@
     </section>
 
     <footer>
-      <p>Email Us: <a href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
+      <p>Email Us: <a class='nav-links' href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
     </footer>
 
     <div>
