--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -9,15 +9,17 @@
   </head>
 
   <body>
-    <header>
-      <h1>Merchants</h1>
-    </header>
 
-    <nav>
-        <a class='nav-links' href="/">Home</a>
-        <a class='nav-links' href="/categories">Category Index</a>
-        <a class='nav-links' href="/items">Item Index</a>
-    </nav>
+    <div class='banner'>
+      <header>
+        <h1>Merchants</h1>
+      </header>
+      <nav>
+          <a class='nav-links' href="/">Home</a>
+          <a class='nav-links' href="/categories">Category Index</a>
+          <a class='nav-links' href="/items">Item Index</a>
+      </nav>
+    </div>
 
     <section class='create-new'>
       <a class='body-link' href='/merchants/new'>Create New Merchant</a>
