sticky header for items & categories pages

--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -9,15 +9,16 @@
   </head>
 
   <body>
-    <header>
-      <h1>Items</h1>
-    </header>
-
-    <nav>
-        <a class='nav-links' href="/">Home</a>
-        <a class='nav-links' href="/merchants">Merchant Index</a>
-        <a class='nav-links' href="/categories">Category Index</a>
-    </nav>
+    <div class='banner'>
+      <header>
+        <h1>Items</h1>
+      </header>
+      <nav>
+          <a class='nav-links' href="/">Home</a>
+          <a class='nav-links' href="/merchants">Merchant Index</a>
+          <a class='nav-links' href="/categories">Category Index</a>
+      </nav>
+    </div>
 
     <section class='create-new'>
       <a class='body-link' href='/items/new'>Create New Item</a>
