Cleans up item dashboard view

--- a/app/views/items/dashboard.erb
+++ b/app/views/items/dashboard.erb
@@ -27,6 +27,8 @@
       <p>Oldest Item: <%= @oldest %></p>
     </section>
 
+    <footer>
+      <p>Email Us: <a class='nav-links' href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
+    </footer>
   </body>
-
 </html>
