--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -26,14 +26,14 @@
 
     <section class="display-grid">
       <% @items.each do |item| %>
-        <div>
-        <div class='cell-title'><h3><a class='body-link' href="/items/<%= item.id %>"><%= item.title %></a></h3></div>
-          <img class='item-image' src="<%= item.image %>"><br>
-          <a href="/items/<%= item.id  %>/edit">Edit</a>
-          <form id='delete' action="/items/<%= item.id %>" method="POST">
-            <input type="hidden" name="_method" value="DELETE">
-            <input type="submit" value="delete"/>
-          </form>
+        <div class='grid-cell'>
+          <div class='cell-title'><h3><a class='body-link' href="/items/<%= item.id %>"><%= item.title %></a></h3></div>
+            <img class='item-image' src="<%= item.image %>"><br>
+            <a href="/items/<%= item.id  %>/edit">Edit</a>
+            <form id='delete' action="/items/<%= item.id %>" method="POST">
+              <input type="hidden" name="_method" value="DELETE">
+              <input type="submit" value="delete"/>
+            </form>
         </div>
       <% end %>
     </section>
