--- a/app/views/merchants/dashboard.erb
+++ b/app/views/merchants/dashboard.erb
@@ -22,16 +22,21 @@
 
     <section class='dashboard-metrics'>
       <p>Merchant with most items: <%= @merchants.has_most_items.name %></p>
-      <p>Merchant with highest priced item: <%= @merchants.includes_most_expensive_item.name %></p><br>
-      <h3>Individual Merchant Analytics</h3>
-      <% @merchants.each do |merchant| %>
-        <p><%= merchant.name %></p>
-        <ul>
-          <li>Number of items: <%= merchant.total_items %></li>
-          <li>Price of all items: $<%= merchant.total_items_price %></li>
-        </ul>
-      <% end %>
+      <p>Merchant with highest priced item: <%= @merchants.includes_most_expensive_item.name %></p>
     </section>
+
+    <h3>Individual Merchant Analytics</h3>
+    <div class="display-grid">
+        <% @merchants.each do |merchant| %>
+          <div class="grid-cell">
+            <p><%= merchant.name %></p>
+            <ul>
+              <li>Number of items: <%= merchant.total_items %></li>
+              <li>Price of all items: $<%= merchant.total_items_price %></li>
+            </ul>
+          </div>
+        <% end %>
+    </div>
 
     <footer>
       <p>Email Us: <a class='nav-links' href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
