--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -15,9 +15,30 @@
     </header>
 
     <nav>
-        <a class='nav-links' href="/merchants">Merchant Index</a>
-        <a class='nav-links' href="/categories">Category Index</a>
-        <a class='nav-links' href="/items">Item Index</a>
+      <div class="dropdown">
+        <button class="dropbtn">Merchants</button>
+          <div class="dropdown-content">
+            <a href="/merchants">Merchant Index</a>
+            <a href="/merchants/new">Create New Merchant</a>
+            <a href="/merchants/dashboard">Merchant Analytics</a>
+          </div>
+      </div>
+      <div class="dropdown">
+        <button class="dropbtn">Items</button>
+          <div class="dropdown-content">
+            <a href="/items">Item Index</a>
+            <a href="/items/new">Create New Item</a>
+            <a href="/items/dashboard">Item Analytics</a>
+          </div>
+      </div>
+      <div class="dropdown">
+        <button class="dropbtn">Categories</button>
+          <div class="dropdown-content">
+            <a href="/categories">Category Index</a>
+            <a href="/categories/new">Create New Category</a>
+            <a href="/categories/dashboard">Category Analytics</a>
+          </div>
+      </div>
     </nav>
 
     <section class="intro-page">
