Adds styling to merchant edit

--- a/app/views/categories/edit.erb
+++ b/app/views/categories/edit.erb
@@ -28,7 +28,7 @@
       </form>
       <div class="quote">
         <p class="quote">Change is Inevitable. Change is Constant</p>
-        <p class="quote">- Benjamin Disraeli -
+        <p class="quote">- Benjamin Disraeli -</p>
       </div>
     </section>
 
