--- a/app/views/items/edit.erb
+++ b/app/views/items/edit.erb
@@ -40,9 +40,9 @@
         <input id='edit-submit' type='submit'/>
       </form>
       <div class="quote">
-        <p class="quote">If we don't change, we don't grow.</p>
-        <p class="quote">If we don't grow, we aren't really living.</p>
-        <p class="quote">- Gail Sheehy -
+        <p class="quote">It is not necessary to change.</p>
+        <p class="quote">Survival is not necessary.</p>
+        <p class="quote">- W. Edwards Deming -</p>
       </div>
     </section>
 
