--- a/app/views/merchants/edit.erb
+++ b/app/views/merchants/edit.erb
@@ -1,7 +1,40 @@
+<!DOCTYPE html>
 
-<form action="/merchants/<%= @merchant.id %>" method="POST">
-  <p>Edit</p>
-  <input type="hidden" name="_method" value="PUT" />
-  <input id='edit-name' type='text' name='merchant[name]' value="<%= @merchant.name %>"/><br/>
-  <input id='edit-submit' type='submit'/>
-</form>
+<html>
+  <head>
+    <meta charset="utf-8" />
+    <title>Shop With No Name</title>
+    <link href="https://fonts.googleapis.com/css?family=PT+Sans+Narrow" rel="stylesheet">
+    <link rel="stylesheet" href="/stylesheets/main.css" title="text/css" />
+  </head>
+
+  <body>
+    <header>
+      <h1>Edit Merchant</h1>
+    </header>
+
+    <nav>
+        <a class='nav-links' href="/merchants">Merchant Index</a>
+        <a class='nav-links' href="/categories">Category Index</a>
+        <a class='nav-links' href="/items">Item Index</a>
+    </nav>
+
+    <section class='form-page'>
+      <form action="/merchants/<%= @merchant.id %>" method="POST">
+        <p>Edit</p>
+        <input type="hidden" name="_method" value="PUT" />
+        <input id='edit-name' type='text' name='merchant[name]' value="<%= @merchant.name %>"/><br/>
+        <input id='edit-submit' type='submit'/>
+      </form>
+      <div class="quote">
+        <p class="quote">If we don't change, we don't grow.</p>
+        <p class="quote">If we don't grow, we aren't really living.</p>
+        <p class="quote">- Gail Sheehy -</p>
+      </div>
+    </section>
+
+    <footer>
+      <p>Email Us: <a class='nav-links' href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
+    </footer>
+  </body>
+</html>
