--- a/app/views/categories/new.erb
+++ b/app/views/categories/new.erb
@@ -19,7 +19,7 @@
         <a class='nav-links' href="/items">Item Index</a>
     </nav>
 
-    <section class="create-form">
+    <section class="create-form form-page">
       <form action="/categories" method="post">
         <p>Create a new category:</p>
         <input id='new-name' type='text' name='category[name]' value="Name"/><br/><br/>
