Adds styling to new merchant

--- a/app/views/merchants/new.erb
+++ b/app/views/merchants/new.erb
@@ -19,10 +19,10 @@
         <a href="/items">Item Index</a>
     </nav>
 
-    <section class="create-form">
+    <section class="create-form form-page">
       <form action="/merchants" method="post">
         <p>Create a new merchant:</p>
-        <input id='new-name' type='text' name='merchant[name]' value="Name"/><br/><br/>
+        <input id='new-name' type='text' name='merchant[name]' value="Name"/><br>
         <input id='new-submit' type='submit'/>
       </form>
     </section>
