drop down nav bar added to all views

--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -20,7 +20,7 @@
           <div class="dropdown-content">
             <a href="/merchants">Merchant Index</a>
             <a href="/merchants/new">Create New Merchant</a>
-            <a href="/merchants/dashboard">Merchant Analytics</a>
+            <a href="/merchants-dashboard">Merchant Analytics</a>
           </div>
       </div>
       <div class="dropdown">
@@ -28,7 +28,7 @@
           <div class="dropdown-content">
             <a href="/items">Item Index</a>
             <a href="/items/new">Create New Item</a>
-            <a href="/items/dashboard">Item Analytics</a>
+            <a href="/items-dashboard">Item Analytics</a>
           </div>
       </div>
       <div class="dropdown">
@@ -36,7 +36,7 @@
           <div class="dropdown-content">
             <a href="/categories">Category Index</a>
             <a href="/categories/new">Create New Category</a>
-            <a href="/categories/dashboard">Category Analytics</a>
+            <a href="/categories-dashboard">Category Analytics</a>
           </div>
       </div>
     </nav>
