--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -48,7 +48,7 @@
 
     <section class="display-grid">
       <% @merchants.each do |merchant| %>
-        <div>
+        <div class='grid-cell'>
         <h3><a class='body-link' href="/merchants/<%= merchant.id %>"><%= merchant.name %></a></h3>
           <a href="/merchants/<%= merchant.id  %>/edit">Edit</a>
           <form action="/merchants/<%= merchant.id %>" method="POST">
