create new merchant styled with background image

--- a/app/views/dashboard.erb
+++ b/app/views/dashboard.erb
@@ -15,6 +15,7 @@
     </header>
 
     <nav>
+      <a class='dropbtn' href="/">Home</a>
       <div class="dropdown">
         <button class="dropbtn">Merchants</button>
           <div class="dropdown-content">
