--- a/app/views/merchants/new.erb
+++ b/app/views/merchants/new.erb
@@ -40,13 +40,15 @@
       </div>
     </nav>
 
-    <section class="create-form form-page">
-      <form action="/merchants" method="post">
-        <p>Create a new merchant:</p>
-        <input id='new-name' type='text' name='merchant[name]' value="Name"/><br>
-        <input id='new-submit' type='submit'/>
-      </form>
-    </section>
+    <div class="main-section">
+      <section class="create-form form-page">
+        <form action="/merchants" method="post">
+          <p>Create a new merchant:</p>
+          <input id='new-name' type='text' name='merchant[name]' value="Name"/><br>
+          <input id='new-submit' type='submit'/>
+        </form>
+      </section>
+    </div>
 
     <footer>
       <p>Email Us: <a href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
