--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -29,6 +29,7 @@ header {
     font-size: 14px;
     border: none;
     font-family: 'PT Sans Narrow', sans-serif;
+    text-decoration: none;
 }
 
 /* The container <div> - needed to position the dropdown content */
@@ -171,13 +172,25 @@ form {
   align-items: center;
 }
 
+.main-section{
+  padding-top: 50px;
+}
+
 .form-page {
-  width: 50%;
-  margin-left: 25%;
-  margin-right: 25%;
+  width: 200px;
+  height: 150px;
+  margin-left: 43%;
   display: flex;
-  justify-content: space-around;
+  justify-content: center;
   align-items: center;
+  background-color: rgb(229,229,232);
+}
+
+.main-section {
+  background-image: url("https://images.unsplash.com/photo-1506765336936-bb05e7e06295?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=edbb96ae977af71118e4c12e97c75477&auto=format&fit=crop&w=1350&q=80");
+  background-size: cover;
+  background-position: bottom;
+  height: 700px;
 }
 
 .quote {
