--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -159,6 +159,13 @@ footer {
   position: fixed;
   top: 0;
   width: 100%;
+  background-color: rgb(184, 17, 88);
+}
+
+/*<<<<<<<*/
+.banner header {
+  background-image: url("https://images.unsplash.com/photo-1506765336936-bb05e7e06295?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=edbb96ae977af71118e4c12e97c75477&auto=format&fit=crop&w=1350&q=80");
+  background-size: cover;
 }
 
 .dashboard-metrics {
