changed footer color on new merchant page and added image background

--- a/app/views/merchants/new.erb
+++ b/app/views/merchants/new.erb
@@ -51,7 +51,7 @@
     </div>
 
     <footer>
-      <p>Email Us: <a href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
+      <p>Email Us: <a class='nav-links' href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
     </footer>
 
   </body>
