--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -164,8 +164,8 @@ footer {
 
 /*<<<<<<<*/
 .banner header {
-  background-image: url("https://images.unsplash.com/photo-1506765336936-bb05e7e06295?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=edbb96ae977af71118e4c12e97c75477&auto=format&fit=crop&w=1350&q=80");
-  background-size: cover;
+  /*background-image: url("https://images.unsplash.com/photo-1506765336936-bb05e7e06295?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=edbb96ae977af71118e4c12e97c75477&auto=format&fit=crop&w=1350&q=80");
+  background-size: cover;*/
 }
 
 .dashboard-metrics {
