--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -42,22 +42,24 @@
       </nav>
     </div>
 
-    <section class='create-new'>
-      <a class='body-link' href='/merchants/new'>Create New Merchant</a>
-    </section>
+    <div class='main-section'>
+      <section class='create-new'>
+        <a class='body-link' href='/merchants/new'>Create New Merchant</a>
+      </section>
 
-    <section class="display-grid">
-      <% @merchants.each do |merchant| %>
-        <div class='grid-cell'>
-        <h3><a class='body-link' href="/merchants/<%= merchant.id %>"><%= merchant.name %></a></h3>
-          <a href="/merchants/<%= merchant.id  %>/edit">Edit</a>
-          <form action="/merchants/<%= merchant.id %>" method="POST">
-            <input type="hidden" name="_method" value="DELETE">
-            <input type="submit" value="delete"/>
-          </form>
-        </div>
-      <% end %>
-    </section>
+      <section class="display-grid">
+        <% @merchants.each do |merchant| %>
+          <div class='grid-cell'>
+          <h3><a class='body-link' href="/merchants/<%= merchant.id %>"><%= merchant.name %></a></h3>
+            <a href="/merchants/<%= merchant.id  %>/edit">Edit</a>
+            <form action="/merchants/<%= merchant.id %>" method="POST">
+              <input type="hidden" name="_method" value="DELETE">
+              <input type="submit" value="delete"/>
+            </form>
+          </div>
+        <% end %>
+      </section>
+    </div>
 
     <footer>
       <p>Email Us: <a class='nav-links' href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
