--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -125,6 +125,7 @@ footer {
   border: solid 0.2px teal;
   padding: 8px;
   list-style-type: none;
+  background-color: rgb(229, 229, 232);
 }
 
 .item-image {
@@ -197,10 +198,12 @@ form {
   background-image: url("https://images.unsplash.com/photo-1506765336936-bb05e7e06295?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=edbb96ae977af71118e4c12e97c75477&auto=format&fit=crop&w=1350&q=80");
   background-repeat: no-repeat;
   background-attachment: fixed;
-  /*background-position: 0 44px;*/
   background-size: auto;
-  /*background-position: bottom;*/
-  /*height: 100%;*/
+}
+
+.category-index {
+  height: 800px;
+  background-size: cover;
 }
 
 .quote {
