--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -125,7 +125,7 @@ footer {
   border: solid 0.2px teal;
   padding: 8px;
   list-style-type: none;
-  background-color: rgb(229, 229, 232);
+  background-color: rgba(229, 229, 232, 0.65);
 }
 
 .item-image {
@@ -199,6 +199,14 @@ form {
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-size: auto;
+}
+
+.items {
+  background-image: url("https://images.unsplash.com/photo-1483992233021-1801812fdacb?ixlib=rb-0.3.5&s=5cddf979650b15523e71d3228a543597&auto=format&fit=crop&w=1650&q=80");
+}
+
+.analytics {
+  height: 800px;
 }
 
 .category-index {
