--- a/app/views/items/index.erb
+++ b/app/views/items/index.erb
@@ -41,7 +41,7 @@
       </nav>
     </div>
 
-    <div class='main-section'>
+    <div class='main-section items'>
       <section class='create-new'>
         <a class='body-link' href='/items/new'>Create New Item</a>
       </section>
