--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -122,6 +122,9 @@ footer {
 }
 
 .grid-cell {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
   border: solid 0.2px teal;
   padding: 8px;
   list-style-type: none;
