--- a/app/views/merchants/index.erb
+++ b/app/views/merchants/index.erb
@@ -42,7 +42,7 @@
       </nav>
     </div>
 
-    <div class='main-section'>
+    <div class='main-section merchants'>
       <section class='create-new'>
         <a class='body-link' href='/merchants/new'>Create New Merchant</a>
       </section>
