--- a/app/views/merchants/new.erb
+++ b/app/views/merchants/new.erb
@@ -40,7 +40,7 @@
       </div>
     </nav>
 
-    <div class="main-section">
+    <div class="main-section merchants analytics">
       <section class="create-form form-page">
         <form action="/merchants" method="post">
           <p>Create a new merchant:</p>
