--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -205,6 +205,10 @@ form {
   background-image: url("https://images.unsplash.com/photo-1483992233021-1801812fdacb?ixlib=rb-0.3.5&s=5cddf979650b15523e71d3228a543597&auto=format&fit=crop&w=1650&q=80");
 }
 
+.merchants {
+  background-image: url("https://images.unsplash.com/photo-1465126188505-4f04a0f23a4d?ixlib=rb-0.3.5&s=31f34e16776b5471afd03cc3bbc2ffb7&auto=format&fit=crop&w=1675&q=80");
+}
+
 .analytics {
   height: 800px;
 }
