added background image to categories pages

--- a/app/views/categories/new.erb
+++ b/app/views/categories/new.erb
@@ -40,13 +40,15 @@
       </div>
     </nav>
 
-    <section class="create-form form-page">
-      <form action="/categories" method="post">
-        <p>Create a new category:</p>
-        <input id='new-name' type='text' name='category[name]' value="Name"/><br/><br/>
-        <input id='new-submit' type='submit'/>
-      </form>
-    </section>
+    <div class='main-section categories'>
+      <section class="create-form form-page">
+        <form action="/categories" method="post">
+          <p>Create a new category:</p>
+          <input id='new-name' type='text' name='category[name]' value="Name"/><br/><br/>
+          <input id='new-submit' type='submit'/>
+        </form>
+      </section>
+    </div>
 
     <footer>
       <p>Email Us: <a class='nav-links' href="mailto:fakeaddress@gmail.com">HR@shopwithnoname.com<a></p>
