--- a/app/views/categories/dashboard.erb
+++ b/app/views/categories/dashboard.erb
@@ -41,7 +41,7 @@
       </nav>
     </div>
 
-    <section class='dashboard-metrics'>
+    <section class='dashboard-metrics categories'>
       <p>Category with most expensive item: <%= @categories.includes_most_expensive_item %></p>
       <p>Category with least expensive item: <%= @categories.includes_least_expensive_item %></p>
       <p>Average item price per category:
