--- a/app/public/stylesheets/main.css
+++ b/app/public/stylesheets/main.css
@@ -191,6 +191,18 @@ form {
   background-color: rgb(229,229,232);
 }
 
+.show-display {
+  width: 20%;
+  height: 250px;
+  margin-left: 40%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 50px;
+  background-color: rgb(229,229,232);
+}
+
 .main-section {
   background-image: url("https://images.unsplash.com/photo-1506765336936-bb05e7e06295?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=edbb96ae977af71118e4c12e97c75477&auto=format&fit=crop&w=1350&q=80");
   background-repeat: no-repeat;
@@ -204,6 +216,7 @@ form {
 
 .merchants {
   background-image: url("https://images.unsplash.com/photo-1465126188505-4f04a0f23a4d?ixlib=rb-0.3.5&s=31f34e16776b5471afd03cc3bbc2ffb7&auto=format&fit=crop&w=1675&q=80");
+  height: 800px;
 }
 
 .categories {
